Remove quotes from Neuzeit

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -96,7 +96,7 @@
     height: 100%;
     margin-left: 5%;
     margin-right: 5%;
-    font-family: 'Neuzeit', 'Didot';
+    font-family: Neuzeit, 'Didot';
   }
     .cl-logo {
       position: absolute;
