--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,7 @@
 @media (max-width: 650px) {
+  .menu-bar {
+    display: none;
+  }
   .bg {
     position: absolute;
     width: 100%;
@@ -53,6 +56,7 @@
     width: 90vw;
     margin-left: 5%;
     margin-right: 5%;
+    top: 0;
   }
     .row-1 {
       width: 100%;
@@ -91,6 +95,7 @@
         opacity: 0.8;
       }
   #view-3 {
+    display: block;
     position: relative;
     width: 90vw;
     height: 100%;
