--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,28 @@
 * {
-    box-sizing: border-box;
-    user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-drag: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
+  box-sizing: border-box;
+  user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 body {
-    width: 100%; height: 100%;
-    margin: 0px; padding: 0px;
-    background-color: #828487;
+  width: 100%; height: 100%;
+  margin: 0px; padding: 0px;
+  background-color: #828487;
 }
 .menu-bar {
-    position: absolute;
-    color: #F5F6ED;
-    font-size: 1.8em;
-    font-family: 'Avenir', 'Comic Sans';
-    font-weight: lighter;
-    top: 4%;
-    left: 15%;
-    width: 50%;
+  position: absolute;
+  color: #F5F6ED;
+  font-size: 1.8em;
+  font-family: 'Avenir', 'Comic Sans';
+  font-weight: lighter;
+  top: 4%;
+  left: 15%;
+  width: 50%;
 }
-
-.menu-bar-item {
+  .menu-bar-item {
     position: relative;
     height: 6%;
     width: 15%;
@@ -31,43 +30,35 @@ body {
     padding-top: 1%;
     padding-left: 5%;
     padding-right: 5%;
-}
+    border-radius: 10px;
+  }
 
-.menu-bar-item.active {
+  .menu-bar-item.active {
     background-color:  #F5F6ED;
     color: #828487;
-}
+  }
 
 #view-1 {
-    position: absolute;
-    background-color:#F5F6ED;
-    width: 90%;
-    height: 90%;
-    margin-left: 2%;
-    margin-right: 8%;
-    margin-top: 8%;
-    margin-bottom: 2%;
+  position: absolute;
+  background-color:#F5F6ED;
+  width: 90%;
+  height: 90%;
+  left: 2%;
+  right: 8%;
+  top: 10%;
+  bottom: 2%;
 }
-#view-2 {
-    position: absolute;
-    top:100%;
-    mar
-}
-#view-3 {
-    display: none;
-}
-
-.mission {
+  .mission {
     position: relative;
     font-size: 4.5em;
     font-family: 'Didot', 'Comic Sans';
     text-align: left;
-    margin-top: 35%;
-    margin-left: 5%;
-    margin-right: 5%;
+    top: 35%;
+    left: 5%;
+    right: 5%;
     color: #333436;
-}
-.logo {
+  }
+  .logo {
     position: absolute;
     width: 100%;
     height: 25%;
@@ -76,9 +67,16 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+  }
+#view-2 {
+  position: absolute;
+  top:100%;
+}
+#view-3 {
+  display: none;
 }
 
 @font-face {
-    font-family: Neuzeit;
-    src: url('../assets/Neuzeit.ttf');
+  font-family: Neuzeit;
+  src: url('../assets/Neuzeit.ttf');
 }
