--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,28 @@ body {
 #view-2 {
   position: absolute;
   top:100%;
+  width: 90%;
+  height: 90%;
+  left: 2%;
+  right: 8%;
+  bottom: 2%;
 }
+  .row1-img {
+    width: 100%;
+    height: 100%;
+   }
+  .row2-img {
+    width: 100%;
+    height: 100%;
+   }
+  .row3-img {
+    width: 100%;
+    height: 100%;
+   }
+  .row4-img {
+    width: 100%;
+    height: 100%;
+   }
 #view-3 {
   display: none;
 }
