Add vertical carousel, vertical swipe, move arrows to the right side, and adjust css positionings

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -14,6 +14,7 @@
     height: 100%;
   }
     .logo {
+      display: block;
       position: relative;
       width: 100%;
       height: 30%;
@@ -23,6 +24,7 @@
       background-position: center;
     }
     .mission {
+      display: block;
       position: relative;
       font-size: 4.5em;
       font-family: 'Didot', 'Comic Sans';
