--- a/css/main.css
+++ b/css/main.css
@@ -70,33 +70,69 @@ body {
   }
 #view-2 {
   position: absolute;
-  top:100%;
   width: 90%;
   height: 90%;
   left: 2%;
   right: 8%;
+  top: 10%;
   bottom: 2%;
 }
-  .row1-img {
-    width: 100%;
+  .row-0 {
+    width: 74%;
     height: 100%;
-   }
-  .row2-img {
-    width: 100%;
+  }
+  .row-1 {
+    width: 74%;
     height: 100%;
-   }
-  .row3-img {
-    width: 100%;
+  }
+    .row1-img {
+      width: 100%;
+      height: 100%;
+    }
+  .row-2 {
+    width: 74%;
     height: 100%;
-   }
-  .row4-img {
-    width: 100%;
+  }
+    .row2-img {
+      width: 100%;
+      height: 100%;
+    }
+  .row-3 {
+    width: 74%;
     height: 100%;
-   }
+  }
+    .row3-img {
+      width: 100%;
+      height: 100%;
+     }
+  .row-4 {
+    width: 74%;
+    height: 100%;
+  }
+    .row4-img {
+      width: 100%;
+      height: 100%;
+    }
 #view-3 {
   display: none;
 }
 
+.desktop {
+  display: none;
+}
+.slick-dots {
+  bottom: 40%;
+  width: 0;
+  right: -40px;
+}
+.slick-dots li {
+  float: right;
+  display: block;
+}
+.slick-slide {
+    height: 560px !important;
+    width: 1200px !important;
+}
 @font-face {
   font-family: Neuzeit;
   src: url('../assets/Neuzeit.ttf');
