--- a/css/mobile.css
+++ b/css/mobile.css
@@ -4,14 +4,18 @@
   }
   .bg {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: #F5F6ED;
   }
   #view-1 {
     position: relative;
     width: 100vw;
     height: 100%;
+    top: 5%;
+    bottom: 0;
+    left: 0;
+    right: 0;
   }
     .logo {
       display: block;
@@ -29,9 +33,9 @@
       font-size: 4.5em;
       font-family: 'Didot', 'Comic Sans';
       text-align: left;
-      margin-top: 10%;
-      margin-left: 5%;
-      margin-right: 5%;
+      top: 0%;
+      left: 5%;
+      right: 5%;
       color: #333436;
       
     }
@@ -45,7 +49,7 @@
       position: absolute;
       width: 100%;
       height: 10%;
-      bottom: 0;
+      bottom: 10%;
       background-image: url(../assets/down-arrow.svg);
       background-repeat: no-repeat;
       background-position: center;
@@ -56,9 +60,11 @@
   #view-2 {
     position: relative;
     width: 90vw;
-    margin-left: 5%;
-    margin-right: 5%;
-    top: 0;
+    height: auto;
+    left: 5%;
+    right: 5%;
+    top: 5%;
+    bottom: 0;
   }
     .row-1 {
       width: 100%;
