--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,23 @@ body {
   top: 10%;
   bottom: 2%;
 }
+  .row-0 {
+    background-color:#F5F6ED;
+    width: 100%;
+    height: 100%;
+    top: 14.3%;
+    bottom: 2%;
+  }
+    .logo.desktop {
+      position: relative;
+      width: 100%;
+      height: 25%;
+      bottom: -55%;
+      background-image: url(../assets/Cortlandt-Labs-logo.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
   .row-1 {
     width: 74%;
     height: 100%;
@@ -113,8 +130,11 @@ body {
   display: none;
 }
 
-.desktop {
+.mobile {
   display: none;
+}
+.desktop {
+  display: block;
 }
 .slick-dots {
   bottom: 40%;
