--- a/css/mobile.css
+++ b/css/mobile.css
@@ -9,6 +9,7 @@
     background-color: #F5F6ED;
   }
   #view-1 {
+    display: block;
     position: relative;
     width: 100vw;
     height: 100%;
@@ -27,7 +28,7 @@
       background-repeat: no-repeat;
       background-position: center;
     }
-    .mission {
+    .mission.mobile {
       display: block;
       position: relative;
       font-size: 4.5em;
@@ -46,6 +47,7 @@
       bottom: 0;
     }
     .arrow {
+      display: block;
       position: absolute;
       width: 100%;
       height: 10%;
@@ -167,6 +169,9 @@
         background-size: contain;
         border-radius: 75px;
       }
+  .desktop {
+    display: none;
+  }
 }
 
 /* iPhone 5 and all */
