Refactor CSS for proportional pictures
Why:
Pictures looked distorted in desktop view

How:
Changed CSS classes to Atomic CSS classes for modularity

--- a/css/main.css
+++ b/css/main.css
@@ -94,38 +94,11 @@ body {
       background-repeat: no-repeat;
       background-position: center;
     }
-  .row-1 {
-    width: 74%;
-    height: 100%;
-  }
-    .row1-img {
-      width: 100%;
-      height: 100%;
-    }
-  .row-2 {
-    width: 74%;
-    height: 100%;
-  }
-    .row2-img {
-      width: 100%;
-      height: 100%;
-    }
-  .row-3 {
-    width: 74%;
-    height: 100%;
-  }
-    .row3-img {
-      width: 100%;
-      height: 100%;
-     }
-  .row-4 {
-    width: 74%;
-    height: 100%;
-  }
-    .row4-img {
-      width: 100%;
-      height: 100%;
-    }
+    
+.med-large-width {
+  width: 74%;
+}
+
 #view-3 {
   display: none;
 }
