--- a/css/mobile.css
+++ b/css/mobile.css
@@ -68,43 +68,24 @@
     top: 5%;
     bottom: 0;
   }
-    .row-1 {
-      width: 100%;
-      height: 33.3%;
-    }
-      .row1-img {
-        width: 100%;
-        height: 100%;
-        opacity: 0.8;
-      }
-    .row-2 {
-      width: 100%;
-      height: 33.3%;
-    }
-      .row2-img {
-        width: 100%;
-        height: 100%;
-        opacity: 0.8;
-      }
-    .row-3 {
-      width: 100%;
-      height: 33.3%;
-    }
-      .row3-img {
-        width: 100%;
-        height: 100%;
-        opacity: 0.8;
-      }
-    .row-4 {
-      width: 100%;
-      height: 33.3%;
-    }
-      .row4-img {
-        width: 100%;
-        height: 100%;
-        opacity: 0.8;
-      }
-  #view-3 {
+
+.small-height {
+  height: 33.3%;
+}
+
+.slight-transparency {
+  opacity: 0.8;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.full-height {
+  height: 100%;
+}
+
+#view-3 {
     display: block;
     position: relative;
     width: 90vw;
