--- a/css/main.css
+++ b/css/main.css
@@ -10,91 +10,27 @@
 body {
   width: 100%; height: 100%;
   margin: 0px; padding: 0px;
-  background-color: #828487;
+  background-color: #F5F6ED;
 }
-.menu-bar {
-  position: absolute;
-  color: #F5F6ED;
-  font-size: 1.8em;
-  font-family: 'Avenir', 'Comic Sans';
-  font-weight: lighter;
-  top: 4%;
-  left: 15%;
-  width: 50%;
-}
-  .menu-bar-item {
-    position: relative;
-    height: 6%;
-    width: 15%;
-    padding-bottom: 1%;
-    padding-top: 1%;
-    padding-left: 5%;
-    padding-right: 5%;
-    border-radius: 10px;
+  .main {
+    position: absolute;
+    min-height: 50rem;
+    width: 100%;
   }
-
-  .menu-bar-item.active {
-    background-color:  #F5F6ED;
-    color: #828487;
-  }
-
-#view-1 {
-  position: absolute;
-  background-color:#F5F6ED;
-  width: 90%;
-  height: 90%;
-  left: 2%;
-  right: 8%;
-  top: 10%;
-  bottom: 2%;
-}
-  .mission {
+  .mission-statement {
     position: relative;
     font-size: 4.5em;
+    margin-top: 25%;
     font-family: 'Didot', 'Comic Sans';
-    text-align: left;
-    top: 35%;
-    left: 5%;
-    right: 5%;
+    text-align: center;
     color: #333436;
   }
   .logo {
-    position: absolute;
-    width: 100%;
-    height: 25%;
-    bottom: 5%;
-    background-image: url(../assets/Cortlandt-Labs-logo.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+    position: relative;
+    display: block;
+    margin: 0 auto;
+    width: 25%;
   }
-#view-2 {
-  position: absolute;
-  width: 90%;
-  height: 90%;
-  left: 2%;
-  right: 8%;
-  top: 10%;
-  bottom: 2%;
-}
-  .row-0 {
-    background-color:#F5F6ED;
-    width: 100%;
-    height: 100%;
-    top: 14.3%;
-    bottom: 2%;
-  }
-    .logo.desktop {
-      position: relative;
-      width: 100%;
-      height: 25%;
-      bottom: -55%;
-      background-image: url(../assets/Cortlandt-Labs-logo.png);
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-    
 .med-large-width {
   width: 74%;
 }
