--- a/css/semantic.css
+++ b/css/semantic.css
@@ -20707,13 +20707,14 @@ ol.ui.horizontal.list li:before,
   display: -ms-flexbox;
   display: flex;
   margin: 1rem 0em;
-  font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  background: #FFFFFF;
+  font-family: 'avenir', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  background: transparent;
   font-weight: normal;
-  border: 1px solid rgba(34, 36, 38, 0.15);
+/*  border: 1px solid rgba(34, 36, 38, 0.15);*/
   box-shadow: 0px 1px 2px 0 rgba(34, 36, 38, 0.15);
-  border-radius: 0.28571429rem;
-  min-height: 2.85714286em;
+  /*border-radius: 0.28571429rem;*/
+  /*min-height: 2.85714286em;*/
+  min-height: 4em;
 }
 
 .ui.menu:after {
