--- a/css/semantic.css
+++ b/css/semantic.css
@@ -524,7 +524,7 @@ body {
   overflow-x: hidden;
   min-width: 320px;
   background: #FFFFFF;
-  font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-family: 'avenir', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 1.4285em;
   color: rgba(0, 0, 0, 0.87);
@@ -540,7 +540,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-family: 'avenir', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   line-height: 1.2857em;
   margin: calc(2rem -  0.14285em ) 0em 1rem;
   font-weight: bold;
@@ -6355,8 +6355,8 @@ i.flag.zimbabwe:before {
 .ui.header {
   border: none;
   margin: calc(2rem -  0.14285em ) 0em 1rem;
-  padding: 0em 0em;
-  font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  padding: 2em 2em;
+  font-family: 'didot', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: bold;
   line-height: 1.2857em;
   text-transform: none;
@@ -6473,7 +6473,7 @@ i.flag.zimbabwe:before {
 ---------------*/
 
 h1.ui.header {
-  font-size: 2rem;
+  font-size: 2.0rem;
 }
 
 h2.ui.header {
@@ -7601,52 +7601,52 @@ i.inverted.circular.black.icon {
 i.mini.icon,
 i.mini.icons {
   line-height: 1;
-  font-size: 0.4em;
+  font-size: 0.4em !important;
 }
 
 i.tiny.icon,
 i.tiny.icons {
   line-height: 1;
-  font-size: 0.5em;
+  font-size: 0.5em !important;
 }
 
 i.small.icon,
 i.small.icons {
   line-height: 1;
-  font-size: 0.75em;
+  font-size: 0.75em !important;
 }
 
 i.icon,
 i.icons {
-  font-size: 1em;
+  font-size: 1em !important;
 }
 
 i.large.icon,
 i.large.icons {
   line-height: 1;
   vertical-align: middle;
-  font-size: 1.5em;
+  font-size: 1.5em !important;
 }
 
 i.big.icon,
 i.big.icons {
   line-height: 1;
   vertical-align: middle;
-  font-size: 2em;
+  font-size: 2em !important;
 }
 
 i.huge.icon,
 i.huge.icons {
   line-height: 1;
   vertical-align: middle;
-  font-size: 4em;
+  font-size: 4em !important;
 }
 
 i.massive.icon,
 i.massive.icons {
   line-height: 1;
   vertical-align: middle;
-  font-size: 8em;
+  font-size: 8em !important;
 }
 
 /*******************************
