--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ body {
   .fourthSegment {
     min-height: 35em;
     width: 100%;
-    background-image: url("../assets/nycwtc.jpg");
+    background-image: url("../assets/sf-night-min.jpeg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -57,7 +57,6 @@ body {
   .fifthSegment {
     min-height: 50em;
     width: 100%;
-    background-color: #878787;
   }
 
 .med-large-width {
