--- a/css/main.css
+++ b/css/main.css
@@ -126,8 +126,7 @@ body {
     background-attachment: fixed;
   }
   .fifthSegment {
-    min-height: 50em;
-    width: 100%;
+    height: 100vh;
   }
 
 .med-large-width {
