--- a/css/main.css
+++ b/css/main.css
@@ -86,25 +86,25 @@ body {
   .firstSegment {
     height: 100vh;
   }
-  .mission-statement {
-    position: relative;
-    font-size: 4.5em;
-    padding-top: 38vh;
-    font-family: 'Didot', 'Comic Sans';
-    text-align: center;
-    color: #333436;
-  }
-  .logo {
-    display: block;
-    margin: 0 auto;
-    margin-top: 8em;
-    width: 20em;
-    animation-duration: 1.75s;
-    animation-delay: 1s;
-    animation-iteration-count: 1;
-    animation-name:flip;
+    .mission-statement {
+      position: relative;
+      font-size: 4.5em;
+      padding-top: 38vh;
+      font-family: 'Didot', 'Comic Sans';
+      text-align: center;
+      color: #333436;
+    }
+    .logo {
+      display: block;
+      margin: 0 auto;
+      margin-top: 8em;
+      width: 20em;
+      animation-duration: 1.75s;
+      animation-delay: 1s;
+      animation-iteration-count: 1;
+      animation-name:flip;
 
-  }
+    }
   .secondSegment {
     min-height: 35em;
     background-image: url("../assets/nycwtc.jpg");
@@ -123,34 +123,34 @@ body {
     border-style: solid;
     border-color: #d5d5d5;
   }
-  .work1 {
-    height:100%;
-    width: 100%;
-    background-image: url("../assets/chatstyle.jpg");
-    background-size: cover;
-    background-position: center;
-  }
-  .work2 {
-    height:100%;
-    width: 100%;
-    background-image: url("../assets/find.jpg");
-    background-size: cover;
-    background-position: center;
-  }
-  .work3 {
-    height:100%;
-    width: 100%;
-    background-image: url("../assets/pathway.jpg");
-    background-size: cover;
-    background-position: center;
-  }
-  .work4 {
-    height:100%;
-    width: 100%;
-    background-image: url("../assets/gigs.jpg");
-    background-size: cover;
-    background-position: center;
-  }
+    .work1 {
+      height:100%;
+      width: 100%;
+      background-image: url("../assets/chatstyle.jpg");
+      background-size: cover;
+      background-position: center;
+    }
+    .work2 {
+      height:100%;
+      width: 100%;
+      background-image: url("../assets/find.jpg");
+      background-size: cover;
+      background-position: center;
+    }
+    .work3 {
+      height:100%;
+      width: 100%;
+      background-image: url("../assets/pathway.jpg");
+      background-size: cover;
+      background-position: center;
+    }
+    .work4 {
+      height:100%;
+      width: 100%;
+      background-image: url("../assets/gigs.jpg");
+      background-size: cover;
+      background-position: center;
+    }
   .fourthSegment {
     min-height: 35em;
     width: 100%;
@@ -160,6 +160,13 @@ body {
     background-attachment: fixed;
   }
   .fifthSegment {
+    height: 50em;
+  }
+  .sixthSegment {
+    height: 35em;
+    background-color: #7A7C7F;
+  }
+  .seventhSegment {
     height: 100vh;
   }
 
