--- a/css/mobile.css
+++ b/css/mobile.css
@@ -21,22 +21,18 @@
     .logo {
       display: block;
       position: relative;
-      width: 100%;
-      height: 30%;
-      background-image: url(../assets/Cortlandt-Labs-logo.png);
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
+      margin: 0 auto;
     }
-    .mission-statement.mobile {
-      display: block;
+    .mission-statement {
       position: relative;
       font-size: 4.5em;
+      line-height: 1em;
+      padding-top: 33vh;
       font-family: 'Didot', 'Comic Sans';
-      text-align: left;
-      top: 0%;
-      left: 5%;
-      right: 5%;
+      text-align: center;
       color: #333436;
 
     }
