Remove excess code and change padding top for width of 450px

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,23 +1,5 @@
 @media (max-width: 650px) {
-  .menu-bar {
-    display: none;
-  }
-  .bg {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    background-color: #F5F6ED;
-  }
-  #view-1 {
-    display: block;
-    position: relative;
-    width: 100vw;
-    height: 100%;
-    top: 5%;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
+
     .logo {
       display: block;
       position: relative;
@@ -36,161 +18,11 @@
       color: #333436;
 
     }
-    .bottom {
-      position: absolute;
-      width: 100%;
-      height: 10%;
-      bottom: 0;
-    }
-    .arrow {
-      display: block;
-      position: absolute;
-      width: 100%;
-      height: 10%;
-      bottom: 10%;
-      background-image: url(../assets/down-arrow.svg);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: 10%;
-      -webkit-animation-name: slideInDown 2s;
-      animation: slideInDown 2s;
-    }
-  #view-2 {
-    position: relative;
-    width: 90vw;
-    height: auto;
-    left: 5%;
-    right: 5%;
-    top: 5%;
-    bottom: 0;
-  }
 
-.small-height {
-  height: 33.3%;
 }
 
-.slight-transparency {
-  opacity: 0.8;
-}
-
-.full-width {
-  width: 100%;
-}
-
-.full-height {
-  height: 100%;
-}
-
-#view-3 {
-    display: block;
-    position: relative;
-    width: 90vw;
-    height: 100%;
-    margin-left: 5%;
-    margin-right: 5%;
-    font-family: Neuzeit, 'Didot';
-  }
-    .cl-logo {
-      position: absolute;
-      height: 15%;
-      right: 0;
-      top: 5%;
-    }
-    .team-heading {
-      position: relative;
-      top: 20%;
-      font-size: 8.2vw;
-      font-weight: lighter;
-      line-height: 120%;
-      color: #333436;
-    }
-      .picture-1 {
-        position: relative;
-        top: 25%;
-        width: 120px;
-        height: 120px;
-        float: left;
-        left: 10%;
-        background-image: url(../assets/aaron.jpg);
-        background-repeat: no-repeat;
-        background-size: contain;
-        border-radius: 75px;
-      }
-      .picture-2 {
-        position: relative;
-        top: 25%;
-        width: 120px;
-        height: 120px;
-        float: left;
-        left: 25%;
-        background-image: url(../assets/jon.jpg);
-        background-repeat: no-repeat;
-        background-size: contain;
-        border-radius: 75px;
-      }
-      .picture-3 {
-        position: relative;
-        top: 70%;
-        width: 120px;
-        height: 120px;
-        left: 35%;
-        background-image: url(../assets/jack.jpg);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: contain;
-        border-radius: 75px;
-      }
-  .desktop {
-    display: none;
-  }
-}
-
-/* iPhone 5 and all */
-@media (max-width: 375px){
-  .picture-1 {
-    left: 5%;
-  }
-  .picture-2 {
-    left: 20%;
-  }
-  .picture-3 {
-    left: 30%;
-  }
-}
-@media (max-width: 320px){
-  .picture-1 {
-    left: 5%;
-  }
-  .picture-2 {
-    left: 15%;
-  }
-  .picture-3 {
-    left: 30%;
-  }
-}
-/* Animations */
-@-webkit-keyframes slideInDown {
-  from {
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-    visibility: visible;
-  }
-
-  to {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-}
-
-@keyframes slideInDown {
-  from {
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-    visibility: visible;
-  }
-
-  to {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+@media (max-width: 450px) {
+  .mission-statement {
+    padding-top: 18vh;
   }
 }
