Implement typing animation

--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,22 @@ body {
   animation-name: flip;
 }
 
+@keyframes type{
+  from { width: 0; }
+}
+
+@keyframes blink{
+  0% { opacity:1; }
+  50% { opacity:0; }
+  100% { opacity:1; }
+}
+.typed-cursor{
+  opacity: 1;
+  -webkit-animation: blink 0.7s infinite;
+  -moz-animation: blink 0.7s infinite;
+  animation: blink 0.7s infinite;
+}
+
 /*--- Cortlandt Red ---*/
   .cortlandt-red {
     color: #FF2444;
@@ -93,6 +109,9 @@ body {
       font-family: 'Didot', 'Comic Sans';
       text-align: center;
       color: #333436;
+      }
+    .statement {
+      display: none;
     }
     .logo {
       display: block;
@@ -100,7 +119,6 @@ body {
       margin-top: 8em;
       width: 20em;
       animation-duration: 1.75s;
-      animation-delay: 1s;
       animation-iteration-count: 1;
       animation-name:flip;
 
