--- a/css/main.css
+++ b/css/main.css
@@ -203,3 +203,34 @@ body {
   footer p {
     font-size: 12px;
   }
+  .ui.top.fixed.menu {
+    opacity: 0.8;
+    background-color: #F5F6ED;
+  }
+  @media (min-width: 650px) {
+    .item span {
+      position: relative;
+      font-size: 1.25em;
+      color: #000;
+      text-decoration: none;
+    }
+    .item span:hover {
+      color: #000;
+    }
+    .item span:before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      bottom: 0;
+      left: 0;
+      background-color: #000;
+      visibility: hidden;
+      transform: scaleX(0);
+      transition: all 0.3s ease-in-out 0s;
+    }
+    .item span:hover:before {
+      visibility: visible;
+      transform: scaleX(1);
+    }
+  }
