--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,6 @@ body {
   animation: blink 0.7s infinite;
 }
 
-/*--- Cortlandt Red ---*/
   .cortlandt-red {
     color: #FF2444;
   }
@@ -234,3 +233,44 @@ body {
       transform: scaleX(1);
     }
   }
+
+  @media (max-width: 650px) {
+  .mission-statement {
+    line-height: 1em;
+    padding-top: 33vh;
+  }
+
+}
+
+/*--- Mobile View ---*/
+
+@media (max-width: 450px) {
+  .mission-statement {
+    padding-top: 18vh;
+  }
+  .logo {
+    margin-top: 5em;
+  }
+  .thirdSegment {
+    min-height: 91.5em;
+  }
+  .fourthSegment {
+    display: none;
+  }
+  .mission-statement span {
+    display: none;
+  }
+  .statement {
+    display: inline;
+  }
+  .statement p {
+    margin: 0;
+    line-height: 1.05em;
+  }
+}
+
+@media (max-width: 360px) {
+  .logo {
+    margin-top: 0.5em;
+  }
+}
