--- a/css/semantic.css
+++ b/css/semantic.css
@@ -551,7 +551,6 @@ h1 {
   min-height: 1rem;
   font-size: 2rem;
   margin-top: 2rem !important;
-  margin-left: 2rem !important;
 }
 
 h2 {
@@ -6357,7 +6356,8 @@ i.flag.zimbabwe:before {
 .ui.header {
   border: none;
   margin: calc(2rem -  0.14285em ) 0em 1rem;
-  padding: 2em 2em;
+  padding-top: 2em;
+  padding-bottom: 2em;
   font-family: 'didot', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: bold;
   line-height: 1.2857em;
