Resize text font

--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,10 @@ body {
   .fifthSegment {
     height: 50em;
   }
+    .fifthSegment p, .seventhSegment p {
+      font-size: 1.8em;
+      font-weight: lighter;
+    }
   .sixthSegment {
     height: 35em;
     background-color: #7A7C7F;
