Attempt to address the issue where background image zooms in in mobile

--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,7 @@ body {
     min-height: 35em;
     background-image: url("../assets/nycwtc.jpg");
     background-size: cover;
+    background-width: 100%;
     background-position: center;
     background-attachment: fixed;
   }
