Reduce text size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -311,10 +311,25 @@ body {
     margin: 0;
     line-height: 1.05em;
   }
+  .fifthSegment p, .seventhSegment p {
+    font-size: 1.5em;
+    font-weight: lighter;
+    text-align: center;
+  }
+  h1.ui.header {
+    padding-top: 1em;
+  }
 }
 
 @media (max-width: 360px) {
   .logo {
     margin-top: 0.5em;
+  }
+  .fifthSegment p, .seventhSegment p {
+    font-size: 1.3em;
+    font-weight: lighter;
+  }
+  h1.ui.header {
+    padding: 0;
   }
 }
