--- a/css/main.css
+++ b/css/main.css
@@ -319,6 +319,9 @@ body {
   h1.ui.header {
     padding-top: 1em;
   }
+  .ui.menu:not(.vertical) .right.item, .ui.menu:not(.vertical) .right.menu {
+    margin-left: 0 !important;
+  }
 }
 
 @media (max-width: 360px) {
