--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,12 @@
 * {
   box-sizing: border-box;
-  user-drag: none;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-drag: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
 }
+
 body {
-  width: 100%; height: 100%;
-  margin: 0px; padding: 0px;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
   background-color: #F5F6ED;
 }
 
