Add contact form CSS to position away from the top

--- a/css/main.css
+++ b/css/main.css
@@ -223,6 +223,12 @@ body {
     opacity: 0.8;
   }
 
+/* Contact Form */
+.contact-form {
+  position: relative;
+  top: 20vh;
+}
+
   footer {
     height: 28em;
     text-align: center;
