--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  /*overflow: hidden;*/
 }
 
 body {
@@ -7,7 +8,6 @@ body {
   height: 100%;
   margin: 0px;
   padding: 0px;
-  background-color: #F5F6ED;
 }
 
 /*---Fonts ---*/
@@ -104,31 +104,53 @@ body {
   }
   .firstSegment {
     height: 100vh;
+    position: relative
   }
+    #background-grey-overlay {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      opacity: 0.70;
+      background-color: #EEEEEE;
+    }
+    #background-wtc {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      z-index: 0.5;
+      background-image: url("../assets/nycwtc.jpg");
+      background-size: cover;
+      background-position: center;
+    }
     .mission-statement {
-      position: relative;
-      font-size: 4.5em;
-      padding-top: 38vh;
-      font-family: 'Didot', 'Comic Sans';
-      text-align: center;
-      color: #333436;
-      }
-    .statement {
-      display: none;
+      position: absolute;
+      top: 25%;
+      left: 10%;
+      text-align: left;
+      color: #4A4A4A;
+      z-index: 999;
+    }
+    .mission-statement h1{
+      font-family: Neoteric;
+      font-size: 3.5em;
+      line-height: 1em;
+      font-weight: 200;
     }
     .logo {
+      position: relative;
       display: block;
       margin: 0 auto;
-      margin-top: 8em;
-      width: 20em;
-      animation-duration: 1.75s;
-      animation-iteration-count: 1;
-      animation-name:flip;
-
+      top: 60%;
+      width: 50%;
+      z-index: 999;
     }
   .secondSegment {
     min-height: 35em;
-    background-image: url("../assets/nycwtc.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -136,42 +158,6 @@ body {
   .thirdSegment {
     min-height: 70em;
   }
-  .thirdSegment .seven {
-    height: 20em;
-    width: 100%;
-    margin:2.5%;
-    border-width: 0;
-    border-style: solid;
-    border-color: #d5d5d5;
-  }
-    .work1 {
-      height:100%;
-      width: 100%;
-      background-image: url("../assets/chatstyle.jpg");
-      background-size: cover;
-      background-position: center;
-    }
-    .work2 {
-      height:100%;
-      width: 100%;
-      background-image: url("../assets/find.jpg");
-      background-size: cover;
-      background-position: center;
-    }
-    .work3 {
-      height:100%;
-      width: 100%;
-      background-image: url("../assets/pathway.jpg");
-      background-size: cover;
-      background-position: center;
-    }
-    .work4 {
-      height:100%;
-      width: 100%;
-      background-image: url("../assets/gigs.jpg");
-      background-size: cover;
-      background-position: center;
-    }
   .fourthSegment {
     min-height: 35em;
     width: 100%;
@@ -198,25 +184,6 @@ body {
     margin: 2em !important;
   }
   .img-description {
-    position: absolute;
-    width: 202px;
-    height: 202px;
-    margin: 0 auto;
-    top: 0.5em;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding-top:18%;
-    border-radius: 50%;
-    background: #FF2444;
-    color: white;
-    text-align: center;
-    visibility: hidden;
-    opacity: 0;
-    transition: all 0.2s ease-in-out 0s;
-    line-height: 1;
-    font-family: "Neoteric";
-    letter-spacing: 1px;
   }
   .profile-pic:hover .img-description {
     visibility: visible;
@@ -249,101 +216,6 @@ body {
     font-size: 12px;
   }
   .ui.top.fixed.menu {
-    opacity: 0.8;
-    background-color: #F5F6ED;
-  }
-  @media (min-width: 650px) {
-    .item span {
-      position: relative;
-      font-size: 1.25em;
-      color: #000;
-      text-decoration: none;
-    }
-    .item span:hover {
-      color: #000;
-    }
-    .item span:before {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 1px;
-      bottom: 0;
-      left: 0;
-      background-color: #000;
-      visibility: hidden;
-      transform: scaleX(0);
-      transition: all 0.3s ease-in-out 0s;
-    }
-    .item span:hover:before {
-      visibility: visible;
-      transform: scaleX(1);
-    }
+
   }
 
-  @media (max-width: 650px) {
-  .mission-statement {
-    line-height: 1em;
-    padding-top: 33vh;
-  }
-
-}
-
-/*--- Mobile View ---*/
-
-@media (max-width: 450px) {
-  .mission-statement {
-    padding-top: 18vh;
-  }
-  .logo {
-    margin-top: 5em;
-  }
-  .secondSegment {
-    background-size: 250%;
-    background-position: top;
-  }
-  .thirdSegment {
-    min-height: 91.5em;
-  }
-  .fourthSegment {
-    display: none;
-  }
-  .mission-statement span {
-    display: none;
-  }
-  .statement {
-    display: inline;
-  }
-  .statement p {
-    margin: 0;
-    line-height: 1.05em;
-  }
-  .fifthSegment p, .seventhSegment p {
-    font-size: 1.5em;
-    font-weight: lighter;
-    text-align: center;
-  }
-  h1.ui.header {
-    padding-top: 1em;
-  }
-  .ui.menu:not(.vertical) .right.item, .ui.menu:not(.vertical) .right.menu {
-    margin-left: 0 !important;
-  }
-  .img-description {
-    width: 100%;
-    height: 100%;
-    padding-top: 15%;
-  }
-}
-
-@media (max-width: 360px) {
-  .logo {
-    margin-top: 0.5em;
-  }
-  .fifthSegment p, .seventhSegment p {
-    font-size: 1.3em;
-    font-weight: lighter;
-  }
-  h1.ui.header {
-    padding: 0;
-  }
-}
