--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body {
   margin: 0px;
   padding: 0px;
 }
+#cover {position: fixed; height: 100%; width: 100%; top:0; left: 0; background: #EEEEEE; z-index:9999;}
 
 /*---Fonts ---*/
 
@@ -127,6 +128,7 @@ body {
       background-position: center;
     }
     .mission-statement {
+      animation-delay: 0.6s;
       position: absolute;
       top: 25%;
       left: 10%;
@@ -207,7 +209,6 @@ body {
     padding: 1em;
     font-size:2.5em;
     text-align: center;
-    font-weight: 400;
     font-family: 'Neoteric';
   }
   .fifthSegment div {
