Remove some unneccessary files

--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,9 @@ body {
   .secondSegment span {
     color: #FC4F57;
   }
+  #partner {
+    text-align: right;
+  }
   .thirdSegment {
     min-height: 65%;
     width: 100%;
