--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body {
     color: #FF2444;
   }
   .firstSegment {
-    height: 100%;
+    height: 100vh;
     position: relative
   }
     #background-grey-overlay {
@@ -69,7 +69,7 @@ body {
       z-index: 999;
     }
   .secondSegment {
-    height: 75%;
+    height: 75vh;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -90,7 +90,7 @@ body {
     text-align: right;
   }
   .thirdSegment {
-    min-height: 65%;
+    min-height: 65vh;
     width: 100%;
     background: linear-gradient( #022235, #323E45);
   }
@@ -155,7 +155,7 @@ body {
     padding: 0.5em;
   }
   .sixthSegment {
-    min-height: 75%;
+    min-height: 75vh;
     background: linear-gradient( #022235, #323E45);
   }
   .sixthSegment h1 {
